Fixed title overflow issue on list_recipes pages and changed sass complier mode from compressed to expanded.

--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -528,7 +528,7 @@ $recipe_width: calc(200px + 2 * 1rem)
                 width: 2rem
                 text-align: center
 
-// My recipes
+// List Recipes
 #my-recipes-cont, #dashboard-cont
     #recipes_container
         padding: 2rem
@@ -554,10 +554,8 @@ $recipe_width: calc(200px + 2 * 1rem)
                 
                 .recipe-title
                     display: block
-                    max-width: calc(100% - 3rem)
                     white-space: nowrap
                     overflow: hidden
-                    text-overflow: ellipsis
                 
                 .recipe-description
                     width: 100%
